# CoMusic

./: .gitignore  CMakeLists.txt  Embed.html  Main.py  README.md  Test.py  VidList.py  VideoList.cp313-win_amd64.pyd  VideoList.lib  a.bat.in  a.ps1.in
.github/workflows/: a.yml  build_dependency.yml
Debug/: VideoList.cp313-win_amd64.pyd  VideoList.exp  VideoList.lib
VideoList/: README.md  VidList.py  __init__.py  exp.cc  imp.cc  imp.h  imp.hh  str.hh
VideoList/lib/: README.md
