cmake_minimum_required(VERSION 3.10)
project(CoMusic)

add_subdirectory(submod)

include_directories(${PYBIND11_INCLUDE_DIR})

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})

file(GLOB_RECURSE VideoList-src ${PROJECT_SOURCE_DIR}/VideoList/*)
pybind11_add_module(VideoList ${VideoList-src})


if(WIN32 AND OFF)
	add_custom_command(
		TARGET VideoList 
		POST_BUILD
		COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/*.pyd ${PROJECT_SOURCE_DIR}
		WORKING_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
	)
endif()
